@@ -6,11 +6,11 @@
 
 #include "handler.h"
 #include "request.h"
+#include "request-forward.h"
 #include "http-server.h"
 #include "ajp-request.h"
 #include "uri-address.h"
 #include "global.h"
-#include "header-forward.h"
 #include "cookie-client.h"
 
 static const char *
@@ -109,42 +109,13 @@ ajp_handler(struct request *request2)
 {
     struct http_server_request *request = request2->request;
     const struct translate_response *tr = request2->translate.response;
-    http_method_t method;
-    istream_t body;
-    struct session *session;
-    struct strmap *headers;
+    struct forward_request forward;
 
-    assert(!request2->body_consumed);
     assert(tr->address.type == RESOURCE_ADDRESS_AJP);
 
-    /* send a request body? */
-
-    if (request2->processor_focus) {
-        /* reserve method+body for the processor, and
-           convert this request to a GET */
-
-        method = HTTP_METHOD_GET;
-        body = NULL;
-    } else {
-        /* forward body (if any) to the real server */
-
-        method = request->method;
-        body = request->body;
-        request2->body_consumed = true;
-    }
-
-    /* generate request headers */
-
-    session = request_get_session(request2);
-    headers = forward_request_headers(request->pool, request->headers,
-                                      request->remote_host, body != NULL,
-                                      !request_processor_enabled(request2),
-                                      session,
-                                      uri_host_and_port(request->pool,
-                                                        tr->address.u.http->uri),
-                                      tr->address.u.http->uri);
-    if (session != NULL)
-        session_put(session);
+    request_forward(&forward, request2,
+                    uri_host_and_port(request->pool, tr->address.u.http->uri),
+                    tr->address.u.http->uri);
 
     /* do it */
 
@@ -153,7 +124,8 @@ ajp_handler(struct request *request2)
                       extract_server_name(request->headers),
                       80, /* XXX */
                       false,
-                      method, tr->address.u.http, headers, body,
+                      forward.method, tr->address.u.http,
+                      forward.headers, forward.body,
                       &ajp_response_handler, request2,
                       request2->async_ref);
 }
